// <auto-generated />
using System;
using Microsoft.EntityFrameworkCore;
using Microsoft.EntityFrameworkCore.Infrastructure;
using Microsoft.EntityFrameworkCore.Migrations;
using Microsoft.EntityFrameworkCore.Storage.ValueConversion;
using Npgsql.EntityFrameworkCore.PostgreSQL.Metadata;
using Pgvector;
using SmartAuth.Infrastructure;

#nullable disable

namespace SmartAuth.Infrastructure.Migrations
{
    [DbContext(typeof(AuthDbContext))]
    [Migration("20251018111205_Init")]
    partial class Init
    {
        /// <inheritdoc />
        protected override void BuildTargetModel(ModelBuilder modelBuilder)
        {
#pragma warning disable 612, 618
            modelBuilder
                .HasAnnotation("ProductVersion", "9.0.4")
                .HasAnnotation("Relational:MaxIdentifierLength", 63);

            NpgsqlModelBuilderExtensions.HasPostgresExtension(modelBuilder, "vector");
            NpgsqlModelBuilderExtensions.UseIdentityByDefaultColumns(modelBuilder);

            modelBuilder.Entity("SmartAuth.Domain.Entities.AuditLog", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("Action")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("character varying(120)")
                        .HasColumnName("action");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<string>("Details")
                        .IsRequired()
                        .ValueGeneratedOnAdd()
                        .HasColumnType("jsonb")
                        .HasDefaultValue("{}")
                        .HasColumnName("details");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid?>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_audit_logs");

                    b.ToTable("audit_logs", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.AuthAttempt", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid?>("DeviceId")
                        .HasColumnType("uuid")
                        .HasColumnName("device_id");

                    b.Property<string>("FailureReason")
                        .HasColumnType("text")
                        .HasColumnName("failure_reason");

                    b.Property<string>("Ip")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("ip");

                    b.Property<double?>("RiskScore")
                        .HasColumnType("double precision")
                        .HasColumnName("risk_score");

                    b.Property<double?>("Score")
                        .HasColumnType("double precision")
                        .HasColumnName("score");

                    b.Property<bool>("Success")
                        .HasColumnType("boolean")
                        .HasColumnName("success");

                    b.Property<int>("Type")
                        .HasColumnType("integer")
                        .HasColumnName("type");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<string>("UserAgent")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("user_agent");

                    b.Property<Guid?>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_auth_attempts");

                    b.ToTable("auth_attempts", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.Device", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<DateTimeOffset?>("LastUsedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_used_at");

                    b.Property<string>("Name")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("character varying(120)")
                        .HasColumnName("name");

                    b.Property<string>("PublicKey")
                        .HasColumnType("text")
                        .HasColumnName("public_key");

                    b.Property<DateTimeOffset>("RegisteredAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("registered_at");

                    b.Property<bool>("Trusted")
                        .HasColumnType("boolean")
                        .HasColumnName("trusted");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_devices");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_devices_user_id");

                    b.ToTable("devices", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.FaceTemplate", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("AuthenticatorId")
                        .HasColumnType("uuid")
                        .HasColumnName("authenticator_id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Vector>("Embedding")
                        .IsRequired()
                        .HasColumnType("vector(512)")
                        .HasColumnName("embedding");

                    b.Property<float>("LivenessThreshold")
                        .HasColumnType("real")
                        .HasColumnName("liveness_threshold");

                    b.Property<string>("ModelVersion")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("model_version");

                    b.Property<float>("QualityScore")
                        .HasColumnType("real")
                        .HasColumnName("quality_score");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.HasKey("Id")
                        .HasName("pk_face_templates");

                    b.HasIndex("AuthenticatorId")
                        .IsUnique()
                        .HasDatabaseName("ix_face_templates_authenticator_id");

                    b.ToTable("face_templates", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.RecoveryCode", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<string>("CodeHash")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)")
                        .HasColumnName("code_hash");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<DateTimeOffset?>("UsedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("used_at");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_recovery_codes");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_recovery_codes_user_id");

                    b.ToTable("recovery_codes", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.Session", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<DateTimeOffset>("ExpiresAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("expires_at");

                    b.Property<string>("RefreshTokenHash")
                        .IsRequired()
                        .HasMaxLength(256)
                        .HasColumnType("character varying(256)")
                        .HasColumnName("refresh_token_hash");

                    b.Property<DateTimeOffset?>("RevokedAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("revoked_at");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_sessions");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_sessions_user_id");

                    b.ToTable("sessions", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.TotpSecret", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<bool>("Enforced")
                        .HasColumnType("boolean")
                        .HasColumnName("enforced");

                    b.Property<string>("Issuer")
                        .IsRequired()
                        .HasMaxLength(80)
                        .HasColumnType("character varying(80)")
                        .HasColumnName("issuer");

                    b.Property<string>("Secret")
                        .IsRequired()
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("secret");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_totp_secrets");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_totp_secrets_user_id");

                    b.ToTable("totp_secrets", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.User", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<string>("Email")
                        .IsRequired()
                        .HasMaxLength(320)
                        .HasColumnType("character varying(320)")
                        .HasColumnName("email");

                    b.Property<DateTimeOffset?>("LastLoginAt")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("last_login_at");

                    b.Property<byte[]>("PasswordHash")
                        .IsRequired()
                        .HasColumnType("bytea")
                        .HasColumnName("password_hash");

                    b.Property<byte[]>("PasswordSalt")
                        .IsRequired()
                        .HasColumnType("bytea")
                        .HasColumnName("password_salt");

                    b.Property<int>("Status")
                        .HasColumnType("integer")
                        .HasColumnName("status");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.HasKey("Id")
                        .HasName("pk_users");

                    b.HasIndex("Email")
                        .IsUnique()
                        .HasDatabaseName("ix_users_email");

                    b.ToTable("users", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.UserAuthenticator", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<string>("DisplayName")
                        .IsRequired()
                        .HasColumnType("text")
                        .HasColumnName("display_name");

                    b.Property<bool>("IsEnrolled")
                        .HasColumnType("boolean")
                        .HasColumnName("is_enrolled");

                    b.Property<bool>("IsPrimary")
                        .HasColumnType("boolean")
                        .HasColumnName("is_primary");

                    b.Property<int>("Type")
                        .HasColumnType("integer")
                        .HasColumnName("type");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.HasKey("Id")
                        .HasName("pk_user_authenticators");

                    b.HasIndex("UserId")
                        .HasDatabaseName("ix_user_authenticators_user_id");

                    b.ToTable("user_authenticators", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.UserLoginConfiguration", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<bool>("FaceEnabled")
                        .HasColumnType("boolean")
                        .HasColumnName("face_enabled");

                    b.Property<string>("FaceProvider")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("face_provider");

                    b.Property<DateTime?>("FaceUpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("face_updated_at_utc");

                    b.Property<string>("TotpAlgorithm")
                        .IsRequired()
                        .ValueGeneratedOnAdd()
                        .HasMaxLength(10)
                        .HasColumnType("character varying(10)")
                        .HasDefaultValue("SHA1")
                        .HasColumnName("totp_algorithm");

                    b.Property<int>("TotpDigits")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasDefaultValue(6)
                        .HasColumnName("totp_digits");

                    b.Property<int>("TotpDriftSteps")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasDefaultValue(1)
                        .HasColumnName("totp_drift_steps");

                    b.Property<bool>("TotpEnabled")
                        .HasColumnType("boolean")
                        .HasColumnName("totp_enabled");

                    b.Property<string>("TotpKeyId")
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("totp_key_id");

                    b.Property<string>("TotpLastCodeHash")
                        .HasMaxLength(200)
                        .HasColumnType("character varying(200)")
                        .HasColumnName("totp_last_code_hash");

                    b.Property<DateTime?>("TotpLastVerifiedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("totp_last_verified_at_utc");

                    b.Property<int>("TotpPeriodSeconds")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("integer")
                        .HasDefaultValue(30)
                        .HasColumnName("totp_period_seconds");

                    b.Property<byte[]>("TotpSecretCiphertext")
                        .HasColumnType("bytea")
                        .HasColumnName("totp_secret_ciphertext");

                    b.Property<byte[]>("TotpSecretNonce")
                        .HasColumnType("bytea")
                        .HasColumnName("totp_secret_nonce");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Guid>("UserId")
                        .HasColumnType("uuid")
                        .HasColumnName("user_id");

                    b.Property<bool>("VoiceEnabled")
                        .HasColumnType("boolean")
                        .HasColumnName("voice_enabled");

                    b.Property<string>("VoiceProvider")
                        .HasMaxLength(100)
                        .HasColumnType("character varying(100)")
                        .HasColumnName("voice_provider");

                    b.Property<DateTime?>("VoiceUpdatedAtUtc")
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("voice_updated_at_utc");

                    b.HasKey("Id")
                        .HasName("pk_user_login_configurations");

                    b.HasIndex("UserId")
                        .IsUnique()
                        .HasDatabaseName("ix_user_login_configurations_user_id");

                    b.ToTable("user_login_configurations", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.VoiceTemplate", b =>
                {
                    b.Property<Guid>("Id")
                        .HasColumnType("uuid")
                        .HasColumnName("id");

                    b.Property<Guid>("AuthenticatorId")
                        .HasColumnType("uuid")
                        .HasColumnName("authenticator_id");

                    b.Property<DateTime>("CreatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("created_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.Property<Vector>("Embedding")
                        .IsRequired()
                        .HasColumnType("vector(256)")
                        .HasColumnName("embedding");

                    b.Property<string>("ModelVersion")
                        .IsRequired()
                        .HasMaxLength(50)
                        .HasColumnType("character varying(50)")
                        .HasColumnName("model_version");

                    b.Property<string>("Phrase")
                        .IsRequired()
                        .HasMaxLength(120)
                        .HasColumnType("character varying(120)")
                        .HasColumnName("phrase");

                    b.Property<int>("SampleRate")
                        .HasColumnType("integer")
                        .HasColumnName("sample_rate");

                    b.Property<DateTime>("UpdatedAtUtc")
                        .ValueGeneratedOnAdd()
                        .HasColumnType("timestamp with time zone")
                        .HasColumnName("updated_at_utc")
                        .HasDefaultValueSql("now() at time zone 'utc'");

                    b.HasKey("Id")
                        .HasName("pk_voice_templates");

                    b.HasIndex("AuthenticatorId")
                        .IsUnique()
                        .HasDatabaseName("ix_voice_templates_authenticator_id");

                    b.ToTable("voice_templates", (string)null);
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.Device", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_devices_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.FaceTemplate", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.UserAuthenticator", "Authenticator")
                        .WithOne("FaceTemplate")
                        .HasForeignKey("SmartAuth.Domain.Entities.FaceTemplate", "AuthenticatorId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_face_templates_user_authenticators_authenticator_id");

                    b.Navigation("Authenticator");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.RecoveryCode", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_recovery_codes_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.Session", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_sessions_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.TotpSecret", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.User", "User")
                        .WithMany()
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_totp_secrets_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.UserAuthenticator", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.User", "User")
                        .WithMany("Authenticators")
                        .HasForeignKey("UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_user_authenticators_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.UserLoginConfiguration", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.User", "User")
                        .WithOne("LoginConfiguration")
                        .HasForeignKey("SmartAuth.Domain.Entities.UserLoginConfiguration", "UserId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_user_login_configurations_users_user_id");

                    b.Navigation("User");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.VoiceTemplate", b =>
                {
                    b.HasOne("SmartAuth.Domain.Entities.UserAuthenticator", "Authenticator")
                        .WithOne("VoiceTemplate")
                        .HasForeignKey("SmartAuth.Domain.Entities.VoiceTemplate", "AuthenticatorId")
                        .OnDelete(DeleteBehavior.Cascade)
                        .IsRequired()
                        .HasConstraintName("fk_voice_templates_user_authenticators_authenticator_id");

                    b.Navigation("Authenticator");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.User", b =>
                {
                    b.Navigation("Authenticators");

                    b.Navigation("LoginConfiguration");
                });

            modelBuilder.Entity("SmartAuth.Domain.Entities.UserAuthenticator", b =>
                {
                    b.Navigation("FaceTemplate");

                    b.Navigation("VoiceTemplate");
                });
#pragma warning restore 612, 618
        }
    }
}
