@startuml
skinparam shadowing false
skinparam classAttributeIconSize 0
title Model klas domeny i infrastruktury (kluczowe encje auth)

package "SmartAuth.Domain.Common" {
  abstract class AuditableEntity {
    +Guid Id
    +DateTime CreatedAtUtc
    +DateTime UpdatedAtUtc
  }
}

package "SmartAuth.Domain.Entities" {
  class User {
    +string Email
    +byte[] PasswordHash
    +byte[] PasswordSalt
    +UserStatus Status
    +DateTimeOffset? LastLoginAt
    +ICollection<UserAuthenticator> Authenticators
    +ICollection<UserBiometric> Biometrics
  }

  class UserAuthenticator {
    +Guid UserId
    +AuthenticatorType Type
    +string Secret
    +DateTimeOffset? LastUsedAt
    +bool IsActive
  }

  class UserBiometric {
    +Guid UserId
    +AuthenticatorType Kind
    +Vector Embedding
    +string Version
    +double QualityScore
    +LivenessMethod LivenessMethod
    +bool IsActive
    +int? AudioSampleRate
    +double? AudioDurationSeconds
  }

  enum UserStatus {
    Active
    Locked
    Disabled
  }

  enum AuthenticatorType {
    Totp
    Face
    Voice
  }

  enum LivenessMethod {
    PassiveV1
    ActiveChallenge
  }
}

package "SmartAuth.Infrastructure" {
  class AuthDbContext {
    +DbSet<User> Users
    +DbSet<UserAuthenticator> UserAuthenticators
    +DbSet<UserBiometric> UserBiometrics
    +SaveChangesAsync(cancellationToken)
    +OnModelCreating(modelBuilder)
  }

  class UserConfiguration
  class UserAuthenticatorConfiguration
  class UserBiometricConfiguration
}

AuditableEntity <|-- User
AuditableEntity <|-- UserAuthenticator
AuditableEntity <|-- UserBiometric

User "1" o-- "0..*" UserAuthenticator : Authenticators
User "1" o-- "0..*" UserBiometric : Biometrics
UserAuthenticator "*" --> "1" User : UserId
UserBiometric "*" --> "1" User : UserId

AuthDbContext --> User
AuthDbContext --> UserAuthenticator
AuthDbContext --> UserBiometric

UserConfiguration ..> User
UserAuthenticatorConfiguration ..> UserAuthenticator
UserBiometricConfiguration ..> UserBiometric

note right of LivenessMethod
ActiveChallenge istnieje w enumie,
ale domyślnie zaimplementowana
jest ścieżka passive liveness.
end note
@enduml
